--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 4 - Pseudocoding</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<div>
+		<h1>Creating a project in Blender (Task 1)<h1>
+			<ol>
+				<li> open the Blender application </li>
+				<li> Exit the splash menu to create a new file, or select an existing one </li>
+				<li> Append any previous blend files or import any meshes or textures using the dropdown menu </li>
+				<li> Using basic meshes, block out your scene </li>
+				<li> Import and position a camera for your scene </li>
+				<li> Import and position lighting </li>
+				<li> From your blocked out scene, model and texture any objects, buildings, people, etc. in your program of choice </li>
+				<li> Replace blocked out models with high quality meshes and textures for each object </li>
+				<li> Tweak render settings in the viewport before rendering the final scene </li>
+				<li> Render final scene, and apply any post-processing effects in a separate image editing program </li>
+		</div>
+		<div>
+			<h1>Pseudocode a computer task (Task 2)<h1>
+				<ol>
+					<li> Create the basic structure for the calculator and buttons with html</li>
+						<li> Use the css file to determine height, width, etc of the calculator</li>
+							<li> 	Use the css file to format a display to view calculations</li>
+							<li> Add required buttons</li>
+						<li> Format the buttons in css</li>
+							<li> Use Javascript to activate the calculator</li>
+		</div>
+
+		<pre><code>
+			//Summary. This is a calculator created in Javascript using HTML and CSS.
+			//Conner Murphy Jonathan Palafox
+			//10/13/2021
+			//const inputField = document.getElementById('input'); ( Value input variable)
+
+			//Create the basic structure for the calculator and buttons with html
+			   //Use the css file to determine height, width, etc of the calculator
+			      //Use the css file to format a display to view calculations
+			     //Add required buttons
+			  //Format the buttons in css
+			 //Use Javascript to activate the calculator
+		</pre></code>
+
+<div>
+	<h2>Challenge</h2>
+		<p>The point of the lab was a bit confusing, but once we understood why we were using pseudocode, things got easier. </p>
+	<h2>Problems</h2>
+		<p> We only had minor issues with this lab, the biggest being .css formatting issues, but some troubleshooting took care of those. Other than that, we didn’t really run into any issues thankfully. One problem we faced is formatting  </p>
+  <h2>Results</h2>
+	  <img src="img/lab4image.png">
+</div>
 
 </body>
 </html>
