--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
+
+
+
+
 <html>
+
+
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 6 - /Topic</title><
+
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
 
+<div id="content">
+		<h3>Challenges<h3>
+			<p>We were struggling organizing the array at the end of task 1 because instead of putting
+				the elements we wanted the console log to return we kept putting [0] or [1] like for myTransport
+				but it never worked but we figured it out.
+		<h3>Problems<h3>
+			<p>
+				We struggled a little with syntax errors but we figured it out. Speficially with listing things and
+				knowing when to put ; or , at the end of an element.
+		<h3>Results<h3>
+			  <p>As a result we were able to get our websites to work and the HTMl shows the script of our cars and their elements in the proper
+				arrays
+
+				<img src="img\kirby.png">
+
+	 <div>
+	     <h2>Script Output</h2>
+	        <script src="js/lab.js"></script>
+	           </div>
+
+<img src="img\nissan 180.jpg">
+
+
+	<div>
 </body>
 </html>
