updates for class

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <Li><a href="lab4/index.html">Lab 4 Transfers</a></Li>
 <Li><a href="lab5/index.html">Lab 5 </a></Li>
 <Li><a href="lab6/index.html">Lab 6 </a></Li>
+<Li><a href="lab7/index.html">lab 7 </a></Li>
+<Li><a href="lab8/index.html">lab 8 </a></Li>
+<Li><a href="lab9/index.html">lab 9 </a></Li>
+<Li><a href="lab11/index.html">lab 11 </a></Li>
+<Li><a href="lab12/index.html">lab 12 </a></Li>
+<Li><a href="lab13/index.html">lab 13 </a></Li>
 
  </ul>
 </div>
