--- a/lab13/index.html
+++ b/lab13/index.html
@@ -28,7 +28,7 @@
             <p>The output works and it actually loops and identifies wether the numbers are multiples</p>
             <h2>FizzBuzzBoom</h2>
             <div id="input">
-                Where should we stop? <input type="number" min=0 max="1000" id="max"><br>
+                What should be the max number? <input type="number" min=0 max="2500" id="max"><br>
                 Which factors should print what?<br>
             <table>
                 <tr>
