--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <Li><a href="lab12/index.html">lab 12 </a></Li>
 <Li><a href="lab13/index.html">lab 13 </a></Li>
 <Li><a href="lab15/index.html">lab 15 </a></Li>
+<Li><a href="lab16/index.html">lab 16 </a><Li> 
 
  </ul>
 </div>
