--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 <Li><a href="lab7/index.html">lab 7 </a></Li>
 <Li><a href="lab8/index.html">lab 8 </a></Li>
 <Li><a href="lab9/index.html">lab 9 </a></Li>
+<Li><a href="lab10/index.html">lab 10 </a></Li>
 <Li><a href="lab11/index.html">lab 11 </a></Li>
 <Li><a href="lab12/index.html">lab 12 </a></Li>
 <Li><a href="lab13/index.html">lab 13 </a></Li>
 <Li><a href="lab15/index.html">lab 15 </a></Li>
-<Li><a href="lab16/index.html">lab 16 </a><Li> 
+<Li><a href="lab16/index.html">lab 16 </a><Li>
 
  </ul>
 </div>
